fix bullet alignment on mobile

--- a/css/page-body.css
+++ b/css/page-body.css
@@ -62,4 +62,7 @@
   .page-body {
     padding: 20px;
   }
+  .page-body main li {
+    margin-inline-start: calc(1.5em + 20px);
+  }
 }
